--- a/css/shop.css
+++ b/css/shop.css
@@ -61,3 +61,9 @@
     background-position: center center;
     z-index: 10;
 }
+.crime{
+    background: url("../img/crimeTeeSM.png") no-repeat;
+    background-size: cover;
+    background-position: center center;
+    z-index: 10;
+}
