--- a/Dev/css/shop-1.css
+++ b/Dev/css/shop-1.css
@@ -40,7 +40,7 @@
 .crime-lrg{background: url("../img/crime-lrg.png") no-repeat;}
 .seafoam{background: url("../img/seafoam-1.png") no-repeat;}
 .seafoam:hover{background: url(../img/seafoam-2.png) no-repeat;}
-.seafowm-lrg{}
+.seafoam-lrg{}
 .fishfish{background: url("../img/fishfish-1.png") no-repeat;}
 .fishfish:hover{background: url("../img/fishfish-2.png") no-repeat;}
 .fishfish-lrg{background: url("../img/fishfish-lrg.png") no-repeat;}
