--- a/Dev/css/mainStyle.css
+++ b/Dev/css/mainStyle.css
@@ -240,7 +240,43 @@ a {
     .MC-item-img img {
         width: 100%;
     }
-/*-----------  Shop Items ------------*/
+
+.mc-item-block li{
+    width: 50%;
+    display: inline-block;
+    float: left;
+    box-sizing: border-box;
+    position: relative;
+    padding: 0rem .675rem;
+}
+.index-post h3 {
+    font-size: 1.4444em;
+}
+.index-post h3,
+.index-post h5{
+    width: 90%;
+    margin: auto;
+}
+.index-post img{
+    width: 100%;
+}
+div.index-post > div {
+    width: 100%;
+    float: left;
+    margin-bottom: -6px;
+}
+.index-hover{
+    position: absolute;
+    text-align: center;
+    padding: 20% 0% 0%;
+    color:rgba(0,0,0,0);
+}
+.index-hover:hover{
+    background-color: rgba(255, 255, 255, 0.7);
+    color: rgba(0,0,0,1);
+}
+
+/*-----------  Shop Items ------------  */
 .shopFeed{
     width: 95%;
     margin: auto;
@@ -616,6 +652,13 @@ input[type=checkbox]:checked ~ #menu{
     .shopFeed li:nth-child(4n){
         margin-top: -7em;
     }
+    div.index-post > div {
+        width: 50%;
+    }
+    .index-hover {
+        width: 47.5%;
+        height: 38.9%;
+    }
 }
 @media screen and (min-width : 51em) {
     #Sub-Nav ul{
@@ -636,7 +679,6 @@ input[type=checkbox]:checked ~ #menu{
         float: right;
     }
     #indexWrapper{
-        width: 80%;
     }
     #SideBar{
         display: block;
@@ -664,11 +706,19 @@ input[type=checkbox]:checked ~ #menu{
         padding-right: 1em;
         width: 80%;
         float: right;
-    }   
+    }
+    
+    div.index-post > div {
+        width: 33.33%;
+    }
+    .index-hover {
+        width: 31.6%;
+        height: 22.5%;
+        padding: 10% 0%;
+    }
 }
 @media screen and (min-width : 63.75em) {
     #indexWrapper{
-        width: 65%;
     }
     .circle{
         height: 20.625rem;
