--- a/css/styles.css
+++ b/css/styles.css
@@ -125,7 +125,7 @@ h1#logo { display:block; position:relative; float:left }
 h1#logo a { display:block; background:url(../images/bg-logo.png) center no-repeat; background-size:contain; width:55px; /*try to keep it below 52px*/ height:52px; text-indent:-9999px; }
 .tagline { float:left; font-family:"Open Sans", Arial, Helvetica, sans-serif; font-size:12px; font-weight:400; padding:0 0 0 16px; margin:0px auto; position:relative; display:table; height:52px; margin-top:-1px; font-style:italic }
 .tagline span { vertical-align:middle; display:table-cell }
-.hentry h1, h2, h3, h4, h5 { line-height:1.3; color:#2b2b2b; display:block; position:relative; padding-bottom:13px; }
+.hentry h1, h2, h3, h4, h5 { line-height:1.3; color:#2b2b2b; display:block; position:relative; padding-bottom:6.5px; }
 h2 { font-size:48px; font-weight:300; line-height:60px; letter-spacing:-2px; margin-top:-5px; }
 h2 strong { font-weight:700; letter-spacing:-1px; }
 h3 { font-size:24px; font-weight:400; line-height:31px; }
@@ -407,7 +407,7 @@ a.button:hover { border:2px solid #2b2b2b; color:#2b2b2b; }
 
 /* Custom
 --------------------------------------------------------------------------------------------------------*/
-.about {background: none repeat scroll 0% 0% #ffffff !important;}
+.offWhite {background: none repeat scroll 0% 0% #ffffff !important;padding: 0px !important;}
 /* End Custom
 --------------------------------------------------------------------------------------------------------*/
 
