--- a/css/styles.css
+++ b/css/styles.css
@@ -121,8 +121,8 @@ pre { padding:0 30px 25px 30px; border:1px dotted #3e3e3e; margin-top:10px; marg
 
 /* =4. Headings
 --------------------------------------------------------------------------------------------------------*/
-h1#logo { display:block; position:relative; float:left }
-h1#logo a { display:block; background:url(../images/bg-logo.png) center no-repeat; background-size:contain; width:55px; /*try to keep it below 52px*/ height:52px; text-indent:-9999px; }
+h1#LogoType { display:block; position:relative; float:left }
+h1#LogoType a { display:block; background:url(../images/bg-logo.png) center no-repeat; background-size:contain; width:55px; /*try to keep it below 52px*/ height:52px; text-indent:-9999px; }
 .tagline { float:left; font-family:"Open Sans", Arial, Helvetica, sans-serif; font-size:12px; font-weight:400; padding:0 0 0 16px; margin:0px auto; position:relative; display:table; height:52px; margin-top:-1px; font-style:italic }
 .tagline span { vertical-align:middle; display:table-cell }
 .hentry h1, h2, h3, h4, h5 { line-height:1.3; color:#2b2b2b; display:block; position:relative; padding-bottom:6.5px; }
