--- a/css/styles.css
+++ b/css/styles.css
@@ -412,3 +412,5 @@ a.button:hover { border:2px solid #2b2b2b; color:#2b2b2b; }
 --------------------------------------------------------------------------------------------------------*/
 
 
+
+.student { padding:15px 0px 0px 0px; /*background:#f8f8f8;*/ border-top:1px solid #d8d8d8; height: auto; margin-top:10px;margin-bottom: -10px; }
