--- a/css/retina-responsive.css
+++ b/css/retina-responsive.css
@@ -1,10 +1,11 @@
 @charset "utf-8";
 /* Retina Ready Images */
 
-@media only screen and (-Webkit-min-device-pixel-ratio: 1.5),
-only screen and (-moz-min-device-pixel-ratio: 1.5),
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5),
+only screen and (min--moz-device-pixel-ratio: 1.5),
 only screen and (-o-min-device-pixel-ratio: 3/2),
-only screen and (min-device-pixel-ratio: 1.5) {
+only screen and (min-device-pixel-ratio: 1.5),
+only screen and (min-resolution: 240dpi){
 h1#logo a { background:url(../images/bg-logo@2x.png) center no-repeat; background-size:contain; }
 
 .map {background:url(../images/icons/bg-map@2x.png) no-repeat center left; background-size:48px 48px;  }
