--- a/css/styles.css
+++ b/css/styles.css
@@ -87,7 +87,7 @@ html, body, #wrap { height: 100%; }
 body > #wrap { height: auto; min-height: 100%; }
 .content-wrapper { padding-bottom: 91px; }
 html { overflow: -moz-scrollbars-vertical; overflow-y: scroll; -webkit-font-smoothing: antialiased; height:100%; -webkit-text-size-adjust: 100%; }
-body { font-size: 16px; font-family: 'Merriweather', Georgia, "Times New Roman", Times, serif; color:#555; background:rgba(153, 192, 180, 1); height:100%; -moz-osx-font-smoothing: grayscale; }
+body { font-size: 16px; font-family: 'Merriweather', Georgia, "Times New Roman", Times, serif; color:#555; background:rgb(170, 170, 170); height:100%; -moz-osx-font-smoothing: grayscale; }
 strong { font-weight:600; }
 a, a > * { -webkit-transition: all 0.2s ease 0s; -moz-transition: all 0.2s ease 0s; -o-transition: all 0.2s ease 0s; transition: all 0.2s ease 0s; }
 *, *:after, *:before { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 0; margin: 0; }
@@ -334,6 +334,7 @@ a .bottom p { width:190px; }
 --------------------------------------------------------------------------------------------------------*/
 .images { display:block; position:relative; background:#000; }
 .images img { width:100%; display: block; max-width: 100% !important; z-index:9 }
+.images.half {width:50%;}
 .images.dark img { opacity:0.3; background:#000; }
 img { box-shadow: #000 0 0 0 }
 .videos { width:940px; height:538px; }
